# ST-RichFormatCodes

./: .editorconfig  .gitattributes  .gitignore  Makefile  README.md  boot.py  pyproject.toml
.github/workflows/: python.yml
menus/: Context.sublime-menu  Default.sublime-commands
plugin/: __init__.py
plugin/commands/: __init__.py  rfc_copy_rich_codes.py
plugin/libs/winclip/: __init__.py
scripts/: run_local_tests.sh
